--- a/blocks/page.css
+++ b/blocks/page.css
@@ -7,4 +7,11 @@
 .page__section {
   max-width: 1280px;
   margin: 0 auto;
+  padding-inline: 32px;
+}
+
+@media (max-width: 627px) {
+  .page__section {
+    padding-inline: 16px;
+  }
 }
